<resources>
    <string name="app_name">WeatherGuide</string>

    <string name="drawer_open" translatable="false">open drawer</string>
    <string name="drawer_close" translatable="false">close drawer</string>


    <!-- navigation -->
    <string name="left_drawer_menu_title_weather">Weather</string>
    <string name="left_drawer_menu_title_settings">Settings</string>
    <string name="left_drawer_menu_title_about">About</string>

    <!-- messages -->
    <string name="about_application">The application WeatherGuide was written by Daniel Kashin and Julia Timofeeva in 2017 as a part of Yandex.Mobilization project</string>

    <!-- views -->
    <string name="updated">updated</string>
    <string name="location_name">Location</string>
    <string name="choose_location">Type location name</string>
    <string name="weather">Weather</string>
    <string name="add_location">Add location</string>
    <string name="edit_locations">Edit</string>
    <string name="menu_item_content_description">Menu item</string>
    <string name="with_request">With request "</string>
    <string name="nothing_was_found">" nothing was found</string>

    <!-- preferences -->
    <string name="key_refresh" translatable="false">refresh_key</string>
    <string name="refresh_period_summary">Set refresh period (minutes)</string>
    <string name="refresh_period">Refresh period</string>
    <string name="key_temperature_in_fahrenheit" translatable="false">KEY_TEMPERATURE_IN_FAHRENHEIT</string>
    <string name="key_weather_speed_in_kph" translatable="false">KEY_WEATHER_SPEED_IN_KPH</string>
    <string name="key_pressure_in_hpa" translatable="false">KEY_PRESSURE_IN_HPA</string>
    <string name="Pressure">Pressure</string>
    <string name="Wind_speed">Wind speed</string>
    <string name="Temperature">Temperature</string>

    <!-- errors -->
    <string name="network_error">Network error. Internet may be disabled.</string>
    <string name="location_not_chosen">Choose location in the left menu</string>
    <string name="current_location_deletion">Current location cannot be deleted</string>
    <string name="api_error">Something unexpected happened on the server side. Maybe, city was not found. You can always choose locations nearby</string>

    <!-- weather -->
    <string name="mmHg">mmHg</string>
    <string name="hPa">hPa</string>
    <string name="mps">mps</string>
    <string name="kph">kph</string>
    <string name="wind">wind</string>
    <string name="humidity">humidity</string>
    <string name="cloudiness">cloudiness</string>

    <!-- dates -->
    <array name="months">
        <item>of January</item>
        <item>of February</item>
        <item>of March</item>
        <item>of April</item>
        <item>of May</item>
        <item>of June</item>
        <item>of Jule</item>
        <item>of August</item>
        <item>of September</item>
        <item>of October</item>
        <item>of November</item>
        <item>of December</item>
    </array>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>

    <!-- dates -->
    <array name="refresh_intervals">
        <item>Never</item>
        <item>Half an hour</item>
        <item>One hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </array>
    <string name="refresh_interval">Refresh interval</string>

    <string name="degree" translatable="false">\u00B0</string>
    <string name="celsius" translatable="false">\u2103</string>
    <string name="fahrenheit" translatable="false">\u2109</string>
    <string name="arrow_down" translatable="false">\u2193</string>
    <string name="arrow_up" translatable="false">\u2191</string>


    <!--            WEATHER API RESOURCES            -->
    <!-- thunderstorm -->
    <string name="id_200">thunderstorm with light rain</string>
    <string name="id_201">thunderstorm with rain</string>
    <string name="id_202">thunderstorm with heavy rain</string>
    <string name="id_210">light thunderstorm</string>
    <string name="id_211">thunderstorm</string>
    <string name="id_212">heavy thunderstorm</string>
    <string name="id_221">ragged thunderstorm</string>
    <string name="id_230">thunderstorm with light drizzle</string>
    <string name="id_231">thunderstorm with drizzle</string>
    <string name="id_232">thunderstorm with heavy drizzle</string>
    <!-- drizzle -->
    <string name="id_300">light intensity drizzle</string>
    <string name="id_301">drizzle</string>
    <string name="id_302">heavy intensity drizzle</string>
    <string name="id_310">light intensity drizzle rain</string>
    <string name="id_311">drizzle rain</string>
    <string name="id_312">heavy intensity drizzle rain</string>
    <string name="id_313">shower rain and drizzle</string>
    <string name="id_314">heavy shower rain and drizzle</string>
    <string name="id_321">shower drizzle</string>
    <!-- rain -->
    <string name="id_500">light rain</string>
    <string name="id_501">moderate rain</string>
    <string name="id_502">heavy intensity rain</string>
    <string name="id_503">very heavy rain</string>
    <string name="id_504">extreme rain</string>
    <string name="id_511">freezing rain</string>
    <string name="id_520">light intensity shower rain</string>
    <string name="id_521">shower rain</string>
    <string name="id_522">heavy intensity shower rain</string>
    <string name="id_531">ragged shower rain</string>
    <!-- snow -->
    <string name="id_600">light snow</string>
    <string name="id_601">snow</string>
    <string name="id_602">heavy snow</string>
    <string name="id_611">sleet</string>
    <string name="id_612">shower sleet</string>
    <string name="id_615">light rain and snow</string>
    <string name="id_616">rain and snow</string>
    <string name="id_620">light shower snow</string>
    <string name="id_621">shower snow</string>
    <string name="id_622">heavy shower snow</string>
    <!-- atmosphere -->
    <string name="id_701">mist</string>
    <string name="id_711">smoke</string>
    <string name="id_721">haze</string>
    <string name="id_731">sand, dust whirls</string>
    <string name="id_741">fog</string>
    <string name="id_751">sand</string>
    <string name="id_761">dust</string>
    <string name="id_762">volcanic ash</string>
    <string name="id_771">squalls</string>
    <string name="id_781">tornado</string>
    <!-- clear -->
    <string name="id_800">clear sky</string>
    <!-- clouds -->
    <string name="id_801">few clouds</string>
    <string name="id_802">scattered clouds</string>
    <string name="id_803">broken clouds</string>
    <string name="id_804">overcast clouds</string>
    <!-- extreme -->
    <string name="id_900">tornado</string>
    <string name="id_901">tropical storm</string>
    <string name="id_902">hurricane</string>
    <string name="id_903">cold</string>
    <string name="id_904">hot</string>
    <string name="id_905">windy</string>
    <string name="id_906">hail</string>
    <!-- additional -->
    <string name="id_951">calm</string>
    <string name="id_952">light breeze</string>
    <string name="id_953">gentle breeze</string>
    <string name="id_954">moderate breeze</string>
    <string name="id_955">fresh breeze</string>
    <string name="id_956">strong breeze</string>
    <string name="id_957">high wind, near gale</string>
    <string name="id_958">gale</string>
    <string name="id_959">severe gale</string>
    <string name="id_960">storm</string>
    <string name="id_961">violent storm</string>
    <string name="id_962">hurricane</string>
    <string name="city_icon_description">city_icon</string>

</resources>
