<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/key_refresh"
        android:defaultValue="Never"
        android:entries="@array/refresh_intervals"
        android:entryValues="@array/refresh_intervals_identifiers"
        android:title="@string/refresh_interval"/>

    <SwitchPreference
        android:key="@string/key_temperature_in_fahrenheit"
        android:defaultValue="false"
        android:summaryOn="@string/fahrenheit"
        android:summaryOff="@string/celsius"
        android:title="@string/Temperature"/>

    <SwitchPreference
        android:key="@string/key_weather_speed_in_kph"
        android:defaultValue="false"
        android:summaryOn="@string/kph"
        android:summaryOff="@string/mps"
        android:title="@string/Wind_speed"/>

    <SwitchPreference
        android:key="@string/key_pressure_in_hpa"
        android:defaultValue="false"
        android:summaryOn="@string/hPa"
        android:summaryOff="@string/mmHg"
        android:title="@string/Pressure"/>

</PreferenceScreen>