<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="@dimen/prediction_weather_vertical_padding"
              android:paddingTop="@dimen/prediction_weather_vertical_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/prediction_weather_padding_end"
        android:paddingStart="@dimen/prediction_weather_padding_start">

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/image_condition"
            android:ellipsize="end"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/prediction_weather_text_size"/>

        <ImageView
            android:id="@+id/image_condition"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/prediction_weather_icon_margin_end"
            android:background="@drawable/w09n"/>

        <TextView
            android:id="@+id/text_max_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/prediction_weather_temperature_margin"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/prediction_weather_text_size"/>

        <TextView
            android:id="@+id/text_min_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/prediction_weather_text_size"/>

    </RelativeLayout>

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/expandable_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="500"
        app:el_expanded="false"
        app:el_parallax="0.5">

       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_marginEnd="@dimen/weather_additional_info_horizontal_margin"
           android:layout_marginStart="@dimen/weather_additional_info_horizontal_margin"
           android:layout_height="wrap_content">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/prediction_weather_temperatures_margin_top"
               android:orientation="horizontal">

               <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1">

                   <TextView
                       android:id="@+id/text_morning_label"
                       android:text="@string/morning"
                       style="@style/WeatherAdditionalTextView"/>

                   <TextView
                       android:id="@+id/text_morning_temperature"
                       style="@style/WeatherAdditionalTextView"
                       android:layout_below="@id/text_morning_label"/>

               </RelativeLayout>

               <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1">

                   <TextView
                       android:id="@+id/text_day_label"
                       android:text="@string/day"
                       style="@style/WeatherAdditionalTextView"/>

                   <TextView
                       android:id="@+id/text_day_temperature"
                       style="@style/WeatherAdditionalTextView"
                       android:layout_below="@id/text_day_label"/>

               </RelativeLayout>

               <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1">

                   <TextView
                       android:id="@+id/text_evening_label"
                       android:text="@string/evening"
                       style="@style/WeatherAdditionalTextView"/>

                   <TextView
                       android:id="@+id/text_evening_temperature"
                       style="@style/WeatherAdditionalTextView"
                       android:layout_below="@id/text_evening_label"/>

               </RelativeLayout>

               <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1">

                   <TextView
                       android:id="@+id/text_night_label"
                       android:text="@string/night"
                       style="@style/WeatherAdditionalTextView"/>

                   <TextView
                       android:id="@+id/text_night_temperature"
                       style="@style/WeatherAdditionalTextView"
                       android:layout_below="@id/text_night_label"/>

               </RelativeLayout>

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/prediction_weather_additional_margin_top"
               android:layout_marginBottom="@dimen/prediction_weather_additional_margin_bottom"
               android:orientation="horizontal">

               <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1">

                   <ImageView
                       android:id="@+id/image_wind"
                       style="@style/WeatherAdditionalIcon"
                       android:background="@drawable/ic_wind"/>

                   <TextView
                       android:id="@+id/text_wind"
                       style="@style/WeatherAdditionalTextView"
                       android:layout_below="@id/image_wind"/>

               </RelativeLayout>

               <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1">

                   <ImageView
                       android:id="@+id/image_humidity"
                       style="@style/WeatherAdditionalIcon"
                       android:background="@drawable/ic_humidity"/>

                   <TextView
                       android:id="@+id/text_humidity"
                       style="@style/WeatherAdditionalTextView"
                       android:layout_below="@id/image_humidity"/>

               </RelativeLayout>

               <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1">

                   <ImageView
                       android:id="@+id/image_pressure"
                       style="@style/WeatherAdditionalIcon"
                       android:background="@drawable/ic_pressure"/>

                   <TextView
                       android:id="@+id/text_pressure"
                       style="@style/WeatherAdditionalTextView"
                       android:layout_below="@id/image_pressure"/>

               </RelativeLayout>

           </LinearLayout>


       </LinearLayout>

    </net.cachapa.expandablelayout.ExpandableLayout>

</LinearLayout>